@@ -38,6 +38,8 @@ Bug fixes:
   (report by user 'william')
 - PR#6665: Failure of tests/asmcomp on sparc
   (Stéphane Glondu)
+- PR#6573: extern "C" for systhreads/threads.h
+  (Mickaël Delahaye)
 - PR#6669: fix 4.02 regression in toplevel printing of lazy values
   (Leo White, review by Gabriel Scherer)
 - PR#6680: Missing parentheses when printing polymorphic variant value in warning
